[tool.poetry]
name = "multiplataforma"
version = "0.1.0"
description = ""
authors = ["britodfbr <britodfbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-magic = [                                   
   { version = '^0.4.14', platform = 'linux' },
]
python-magic-bin = [
   { version = '^0.4.14', platform = 'win32' },
]
libmagic = [
   { version = '*', platform = "darwin" },
]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
